# gen_cerbot

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  README.md  SPEC.md  TASKS.md  pyproject.toml
docs/: ARCHITECTURE.md  PRD.md  SPEC.md  TASKS.md
src/gen_cerbot/: cli.py
src/gen_cerbot/certbot/: installer.py  manager.py
src/gen_cerbot/core/: config.py  exceptions.py
src/gen_cerbot/domain/: models.py  services.py
src/gen_cerbot/providers/: apache.py  base.py  factory.py  nginx.py  traefik.py
src/gen_cerbot/templates/apache/: vhost-debian.conf.j2  vhost-redhat.conf.j2  vhost-suse.conf.j2
src/gen_cerbot/templates/nginx/: site.conf.j2
src/gen_cerbot/templates/traefik/: docker-compose.yml.j2  traefik.yml.j2
src/gen_cerbot/utils/: distro.py  dns.py  package_manager.py  registry.py  system.py  templates.py
tests/: conftest.py
tests/fixtures/certbot/: certificates_empty.txt  certificates_prod.txt  certificates_staging.txt
tests/unit/: test_apache_provider.py  test_certbot_manager.py  test_certbot_service.py  test_distro.py  test_dns_validator.py  test_nginx_provider.py  test_nginx_template.py  test_package_manager.py  test_provider_factory.py  test_registry.py  test_system.py  test_templates.py  test_traefik_provider.py
